# CV-course

./: .gitignore  CMakeLists.txt  README.md
H1/: AnimeCreator.cpp  AnimeCreator.h  CMakeLists.txt  README.md  anime_head.h  anime_juliaset.h  anime_tail.cpp  anime_tail.h  julia_gpu.cu  julia_gpu.h  main.cpp
H1/juliaset/gpu/: CMakeLists.txt  utilities.h
HW1/: CMakeLists.txt  README.md  anime_head.cpp  anime_juliaset.cpp  anime_juliaset.h  main.cpp
HW1/juliaset/cpu/: CMakeLists.txt  julia_cpu.cpp  julia_cpu.h  utilities.cpp  utilities.h
HW1/juliaset/gpu/: julia_gpu.cu  julia_gpu.h  utilities.cu  utilities.h
HW2/: .gitignore  CMakeLists.txt  FaceLoader.cpp  FaceLoader.h  README.md  reconstruct.cpp  test.cpp  train.cpp
HW3/: .gitignore  LeNet5.py  README.md  cifar10.py  mnist.py  resnet18.py  utils.py
